fix: express vercel entry via api/index.js

--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "linktree-family",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "commonjs",
   "scripts": {
+    "dev": "node server.js",
     "start": "node server.js"
   },
   "dependencies": {
